--- a/inscope.html
+++ b/inscope.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Service Worker sample</h1>
   <p>ServiceWorker を使ってページをキャッシュするサンプルです。</p>
-  <img src="http://www.w3.org/html/logo/downloads/HTML5_Logo_128.png" />
+  <!--<img src="http://www.w3.org/html/logo/downloads/HTML5_Logo_128.png" />-->
   <img src="html5j.png" />
   <p id="log"></p>
 <script>
