added external image

--- a/inscope.html
+++ b/inscope.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Service Worker sample</h1>
   <p>ServiceWorker を使ってページをキャッシュするサンプルです。</p>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/240px-HTML5_logo_and_wordmark.svg.png" />
   <img src="html5j.png" />
   <p id="log"></p>
 <script>
