--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<head>
-  <meta http-equiv='Content-Type' content='text/html; charset=utf8'>
-  <link rel='stylesheet' type='text/css' href='main.css'>
-  <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Special+Elite'>
-</head>
-<body>
-  <h1>Service Worker sample</h1>
-  <p>ServiceWorker を使ってページをキャッシュするサンプルです。</p>
-  <a href="inscope.html">スコープ内のページを開く</a>
-  <p id="log"></p>
-  <script type='text/javascript' src='page.js'></script>
-</body>
+<ul>
+  <li> <a href="register.html">Register</a>
+  <li> <a href="inscope.html">(To be) Controlled page</a>
+</ul>
